force-app/main/default/objects/SCOC__OFACAlertList__c/SCOC__OFACAlertList__c.object-meta.xml
<CustomObject>
    <description>Response Entity OFAC Alert List</description>
    <label>OFAC Alert</label>
    <nameField>
        <displayFormat>OFACAL-{00000}</displayFormat>
        <label>OFAC Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OFAC Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>