force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__BranchAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__BranchAccountNumber__c</fullName>
    <description>Branch account number</description>
    <label>Branch Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>