force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__LegalVerbiage__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LegalVerbiage__c</fullName>
    <description>OFAC legal verbiage</description>
    <label>Legal Verbiage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>