force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__MemberCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__MemberCode__c</fullName>
    <description>Member Code</description>
    <label>Member Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>