force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__PersonName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__PersonName__c</fullName>
    <description>OFAC person name.</description>
    <label>Person Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>