force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__ResponseCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseCode__c</fullName>
    <description>OFAC response code.</description>
    <label>Response Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>