force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__ResponseCodeDescription__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseCodeDescription__c</fullName>
    <description>OFAC response Code description.</description>
    <label>Response Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>