force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__ResponseTypeCode__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseTypeCode__c</fullName>
    <description>OFAC response type code.</description>
    <label>Response Type Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>