force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__ResponseTypeDescription__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ResponseTypeDescription__c</fullName>
    <description>OFAC response type description.</description>
    <label>Response Type Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>