force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__RevisedVerbiageIndicator__c.field-meta.xml
<CustomField>
    <fullName>SCOC__RevisedVerbiageIndicator__c</fullName>
    <description>Revised verbiage indicator.</description>
    <label>Revised Verbiage Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>