force-app/main/default/objects/SCOC__OFACAlertList__c/fields/SCOC__TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>SCOC__TransactionDateTime__c</fullName>
    <description>OFAC transaction date and time.</description>
    <label>Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>